scrollbar dashboard fix

--- a/gui/FairExchange-GUI/react/src/assets/css/dashboard.css
+++ b/gui/FairExchange-GUI/react/src/assets/css/dashboard.css
@@ -31,3 +31,6 @@
 .header-fairexchange {
 	z-index: 99;
 }
+::-webkit-scrollbar{
+	display: none;
+}
